replaced roc plot with latest version

--- a/annual-dhf-forecasts-causality/Lauer-annual-dhf-forecasts-causality.Rnw
+++ b/annual-dhf-forecasts-causality/Lauer-annual-dhf-forecasts-causality.Rnw
@@ -482,7 +482,7 @@ $$
 
 \begin{figure}
 \centering
-\includegraphics[width=0.75\linewidth]{figure/roc-plot-1}
+\includegraphics[width=0.75\linewidth]{figure/roc-plot.png}
 \end{figure}
 
 \end{frame}
